--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Anta&family=Press+Start+2P&display=swap');
+
 *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: "Press Start 2P", system-ui;
+    font-weight: 400;
+    font-size: 1.2rem;
 }
 body{
     display: flex;
@@ -13,7 +18,7 @@ body{
 
 /* Área de jogo */
 #PlayArea{
-    aspect-ratio: 1/0.61;
+    aspect-ratio: 0.71/1;
     max-width: 700px;
     /* max-height: 800px;  */
     padding: 50px 0px;
@@ -41,6 +46,7 @@ body{
     justify-content: center;
     box-shadow: inset 1px 1px 4px 0px rgba(0, 0, 0, 0.500);
     position: relative;
+    flex: 1;
 }
 #onlight{
     height: 10px;
@@ -73,6 +79,20 @@ li button{
     padding: 10px;
 }
 
+/* bottom */
+#bottom{
+    display: flex;
+    width: 90%;
+    height: 300px;
+    flex: 1;
+}
+#scoreArea{
+    flex: 1;
+}
+#buttonsArea{
+    flex: 1;
+    
+}
 /* buttons */
 
 #buttonsArea button{
@@ -84,7 +104,7 @@ li button{
     border:none;
     box-shadow: 2px 2px 5px 0.5px rgba(0, 0, 0, 0.500) , inset -1px -1px 4px .25px rgba(0, 0, 0, 0.500) , inset 1px 1px 4px .25px rgba(255, 255, 255, 0.300);
     cursor: pointer;
-    transition:  all 3s ease;
+    
 }
 #buttonsArea button:hover {
     box-shadow: inset 2px 2px 4px 2px rgba(0, 0, 0, 0.500) ;
@@ -95,4 +115,38 @@ li button{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    
+}
+.button p{
+    font-family: "Anta", sans-serif;
+}
+/* score area */
+#scoreArea{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100%;
+}
+#score{
+    background-color: #9B9E4D;
+    box-shadow: inset 5px 5px 15px 0 #464926;
+    border-radius: 2px;
+    height: 30%;
+    width: 40%;
+    color: black;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+#scoreArea p{
+    font-size: 2rem;
+    font-family: "Anta", sans-serif;
+    font-size: 1.5rem;
+}
+hr{
+    width: 60%;
+    margin: 5px;
+    border: 1px solid black;
 }
