--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     margin: 0;
     font-family: "Press Start 2P", system-ui;
     font-weight: 400;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     user-select: none;
 }
 body{
@@ -296,49 +296,110 @@ hr{
 
 
 /* Game Area */
-#VS hr{
-    width: 100%;
-}
-#VS{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    flex: .5;
-}
 
-
-.Game img{
-    
-    filter:hue-rotate(50deg);
-    
-}
-.Game{
+#Game{
     display:flex;
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
     height: 100%;
     width: 100%;
+    position: relative;
+    display: none;
+    animation: GameOn steps(5) 1.5s ;
+    opacity: (1);
 }
-.areas{
+@keyframes GameOn {
+    0%{
+        opacity: 0;
+    }
+}
+
+#VS{
+    width: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-#playerArea{
-    flex: 1;
-}
-
-
-
-#playerArea div{
+.Areas{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
     height: 100%;
+    
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
+}
+#boticonArea{
+    
+    width: 50%;
+    height: 100px;
+}
+.Areas .pick{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.Areas .pick img{
+    height: 60%;
+    filter:opacity(.85);
+
+}
+.Icon{
+    width: 50%;
+    height: 80%;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    animation: infinite pulse .8s steps(2) both alternate;
+    
+    
+}
+.Icon[name='BotI']{
+    background-image: url(assets/image/Bot.png);
+}
+.Icon[name='PlayerI']{
+    filter: hue-rotate(45deg);
+    background-image: url(assets/image/pixil-frame-0\ \(1\).png);
+}
+@keyframes pulse{
+    0%{
+        transform:scale(1);
+    }
+    100%{
+        transform: scale(1.1);
+    }
+}
+.botPick img{
+    transform: scaleX(-1);
+}
+#playerPick{
+    background-image: url(assets/image/pedra.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    animation: alternate both infinite pulsePick .8s steps(5);
+    height: 100%;
 }
 
-#playerIcon{
-    height:20%
+#botPick{
+    background-image: url(assets/image/pedra.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    animation: alternate both infinite pulsePick .8s steps(5);
+}
+
+@keyframes pulsePick {
+    0%{
+        background-size: 45%;
+    }
+    100%{
+        background-size: 50%;
+    }
 }
