--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@ li button{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    position: relative;
     
 }
 .button p{
@@ -205,10 +206,27 @@ li button{
     font-family: "Anta", sans-serif;
     font-size: 1.5rem;
 }
+#VS hr{
+    width: 60%;
+    margin: 5px;
+    border: 1px solid black;
+}
+#VS{
+    animation: alternate steps(3) both floatVS 1s infinite;
+
+}
 hr{
     width: 60%;
     margin: 5px;
     border: 1px solid black;
+}
+@keyframes floatVS {
+    0%{
+        transform: translateY(3px);
+    }
+    100%{
+        transform: translateY(-3px);
+    }
 }
 /* start e select buttons */
 .buttonsSS{
@@ -298,7 +316,7 @@ hr{
 /* Game Area */
 
 #Game{
-    display:flex;
+    display:none;
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
@@ -349,7 +367,7 @@ hr{
 }
 .Areas .pick img{
     height: 60%;
-    filter:opacity(.85);
+    filter:opacity(1);
 
 }
 .Icon{
@@ -377,9 +395,7 @@ hr{
         transform: scale(1.1);
     }
 }
-.botPick img{
-    transform: scaleX(-1);
-}
+
 #playerPick{
     background-image: url(assets/image/pedra.png);
     background-position: center;
@@ -389,7 +405,7 @@ hr{
 }
 
 #botPick{
-    background-image: url(assets/image/pedra.png);
+    background-image: url(assets/image/QM.png);
     background-position: center;
     background-repeat: no-repeat;
     animation: alternate both infinite pulsePick .8s steps(5);
@@ -401,5 +417,24 @@ hr{
     }
     100%{
         background-size: 50%;
+    }
+}
+
+#QuestionPick{
+    background-image: url(assets/image/QM.png);
+    background-position: center;
+    background-size: 40%;
+    background-repeat: no-repeat;
+    z-index: 100;
+    height: 100%;
+    width: 100%;
+    animation: QM 1s infinite both alternate steps(5);
+}
+@keyframes QM {
+    0%{
+        transform: translateY(5px);
+    }
+    100%{
+        transform: translateY(-5px);
     }
 }
