--- a/style.css
+++ b/style.css
@@ -206,6 +206,16 @@ li button{
     font-family: "Anta", sans-serif;
     font-size: 1.5rem;
 }
+#NumbScore{
+    display: none;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    animation: GameOn steps(5) .5s ;
+
+}
 #VS hr{
     width: 60%;
     margin: 5px;
@@ -324,7 +334,7 @@ hr{
     width: 100%;
     position: relative;
     display: none;
-    animation: GameOn steps(5) 1.5s ;
+    animation: GameOn steps(5) 1s ;
     opacity: (1);
 }
 @keyframes GameOn {
@@ -346,7 +356,7 @@ hr{
     justify-content: space-between;
     width: 100%;
     height: 100%;
-    
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -362,8 +372,14 @@ hr{
     width: 50%;
     display: flex;
     align-items: center;
+    flex-direction: column;
     justify-content: center;
     
+}
+#NamePick{
+    color: black;
+    position: absolute;
+    bottom: 0;
 }
 .Areas .pick img{
     height: 60%;
@@ -381,7 +397,7 @@ hr{
     
 }
 .Icon[name='BotI']{
-    background-image: url(assets/image/Bot.png);
+    background-image: url(assets/image/BOT\ NEW.png);
 }
 .Icon[name='PlayerI']{
     filter: hue-rotate(45deg);
@@ -400,14 +416,18 @@ hr{
     background-image: url(assets/image/pedra.png);
     background-position: center;
     background-repeat: no-repeat;
+    background-size: 50%;
     animation: alternate both infinite pulsePick .8s steps(5);
     height: 100%;
+    
 }
 
 #botPick{
     background-image: url(assets/image/QM.png);
     background-position: center;
     background-repeat: no-repeat;
+    background-size: 50%;
+    height: 100%;
     animation: alternate both infinite pulsePick .8s steps(5);
 }
 
@@ -423,7 +443,7 @@ hr{
 #QuestionPick{
     background-image: url(assets/image/QM.png);
     background-position: center;
-    background-size: 40%;
+    background-size: 20%;
     background-repeat: no-repeat;
     z-index: 100;
     height: 100%;
@@ -436,5 +456,72 @@ hr{
     }
     100%{
         transform: translateY(-5px);
+    }
+}
+
+
+.Swing{
+    animation: SwingHands  2s alternate  steps(6) ;
+}
+@keyframes SwingHands{
+    0%{
+        transform: translateY(0px);
+        background-size: 45%;
+    }
+    16%{
+        transform: translateY(15px);
+    }
+    33%{
+        transform: translateY(-15px);
+    }
+    48%{
+        transform: translateY(15px);
+
+    }
+    64%{
+        transform: translateY(-15px);
+
+    }
+    80%{
+        transform: translateY(15px);
+
+    }
+    100%{
+        transform: translateY(0px);
+        background-size: 50%;
+    }
+    
+
+}
+
+@media screen and (max-width:500px){
+    body{
+        overflow-x: hidden;
+    }
+    
+    #PlayArea{
+        width: 100%;
+        height: 100%;
+        border: none;
+        border-radius: 0;
+        box-shadow: none;
+    }
+    #detail{
+        width: 90%;
+    }
+    #visorArea{
+        width: 90%;
+    }
+    #onlightArea{
+        display: none;
+    }
+    #buttonsArea{
+        height: 80px;
+        transform: rotate(-15deg);
+    }
+    #buttonsArea button{
+        height: 50px;
+        width: 50px;
+        border-radius: 100%;
     }
 }
