--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ body{
 }
 
 /* Área de jogo */
+
+
+
 #PlayArea{
     aspect-ratio: 0.75/1;
     border: 3px  black;
@@ -88,10 +91,7 @@ body{
 #onlight{
     height: 10px;
     width: 10px;
-    box-shadow: 0 0 15px 8px greenyellow;
-
-    background-color: greenyellow;
-    
+    background-color: #6e7036;
     border-radius: 100%;
 }
 
@@ -104,8 +104,10 @@ body{
    align-items: center;
    justify-content: center;
    display: flex;
-   background-color: #9B9E4D; 
+   background-color: #6e7036; 
    flex-direction: row;
+   transition: all 2s steps(4) ;
+
 }
 .visor{
     display: flex;
@@ -185,7 +187,7 @@ li button{
     height: 100%;
 }
 #score{
-    background-color: #9B9E4D;
+    background-color: #6e7036;
     box-shadow: inset 5px 5px 15px 0 #464926;
     border-radius: 2px;
     height: 50%;
@@ -195,6 +197,8 @@ li button{
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    transition: all 2s steps(4);
+
 }
 #scoreArea #score p{
     font-family: "Press Start 2P", system-ui;
@@ -401,6 +405,9 @@ hr{
 }
 .Icon[name='PlayerI']{
     filter: hue-rotate(45deg);
+    display: flex;
+    align-items: top;
+    justify-content: center;
     background-image: url(assets/image/pixil-frame-0\ \(1\).png);
 }
 @keyframes pulse{
@@ -524,4 +531,32 @@ hr{
         width: 50px;
         border-radius: 100%;
     }
+}
+
+#nameP{
+    width: 100%;
+    height: 60%;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+
+}
+
+#nomePlayerInput{
+    height: 70px;
+    width: 55%;
+    background-color: transparent;
+    font-size: 3rem;
+    border: none;
+    letter-spacing: 10px;
+    text-transform: uppercase;  
+    text-align: center;
+    overflow-x: hidden;
+    outline: none;
+    border-bottom: 3px solid black ;
+}
+#nomePlayer{
+    text-transform: uppercase;
 }
